# avivo__xf86-video-avivo

./: .gitignore  Makefile.am  STATUS  configure.ac
avivotool/: Makefile  Makefile.am  avivotool.c  check-reglist.sh  gen-reg-list.sh  mkdiff.sh  random-regs.txt  replay-from-diff.sh  watch-random-regs.sh  xf86i2c.c  xf86i2c.h
include/: Makefile.am  avivo.h  avivo_chipset.h  radeon_reg.h
xorg/: Makefile.am  avivo.c  avivo_bios.c  avivo_chipset.c  avivo_common.c  avivo_crtc.c  avivo_cursor.c  avivo_i2c.c  avivo_memory.c  avivo_output.c  avivo_output_lfp.c  avivo_state.c
